--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
+    "cypress": "^9.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +41,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "eslint-plugin-jest": "^26.6.0"
+    "@testing-library/user-event": "^14.2.6",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-jest": "^26.6.0",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
